// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must generate for styled block with empty decorator 1`] = `
[
  {
    "decoratorKey": null,
    "end": 10,
    "leaves": [
      {
        "end": 4,
        "start": 0,
      },
      {
        "end": 8,
        "start": 4,
      },
      {
        "end": 10,
        "start": 8,
      },
    ],
    "start": 0,
  },
]
`;

exports[`must generate for styled block with multiple decorators 1`] = `
[
  {
    "decoratorKey": "y",
    "end": 3,
    "leaves": [
      {
        "end": 3,
        "start": 0,
      },
    ],
    "start": 0,
  },
  {
    "decoratorKey": null,
    "end": 6,
    "leaves": [
      {
        "end": 4,
        "start": 3,
      },
      {
        "end": 6,
        "start": 4,
      },
    ],
    "start": 3,
  },
  {
    "decoratorKey": "z",
    "end": 10,
    "leaves": [
      {
        "end": 8,
        "start": 6,
      },
      {
        "end": 10,
        "start": 8,
      },
    ],
    "start": 6,
  },
]
`;

exports[`must generate for styled block with single decorator 1`] = `
[
  {
    "decoratorKey": null,
    "end": 3,
    "leaves": [
      {
        "end": 3,
        "start": 0,
      },
    ],
    "start": 0,
  },
  {
    "decoratorKey": "x",
    "end": 6,
    "leaves": [
      {
        "end": 4,
        "start": 3,
      },
      {
        "end": 6,
        "start": 4,
      },
    ],
    "start": 3,
  },
  {
    "decoratorKey": null,
    "end": 10,
    "leaves": [
      {
        "end": 8,
        "start": 6,
      },
      {
        "end": 10,
        "start": 8,
      },
    ],
    "start": 6,
  },
]
`;

exports[`must generate for unstyled block with empty decorator 1`] = `
[
  {
    "decoratorKey": null,
    "end": 7,
    "leaves": [
      {
        "end": 7,
        "start": 0,
      },
    ],
    "start": 0,
  },
]
`;

exports[`must generate for unstyled block with multiple decorators 1`] = `
[
  {
    "decoratorKey": "y",
    "end": 3,
    "leaves": [
      {
        "end": 3,
        "start": 0,
      },
    ],
    "start": 0,
  },
  {
    "decoratorKey": null,
    "end": 6,
    "leaves": [
      {
        "end": 6,
        "start": 3,
      },
    ],
    "start": 3,
  },
  {
    "decoratorKey": "z",
    "end": 7,
    "leaves": [
      {
        "end": 7,
        "start": 6,
      },
    ],
    "start": 6,
  },
]
`;

exports[`must generate for unstyled block with single decorator 1`] = `
[
  {
    "decoratorKey": null,
    "end": 3,
    "leaves": [
      {
        "end": 3,
        "start": 0,
      },
    ],
    "start": 0,
  },
  {
    "decoratorKey": "x",
    "end": 6,
    "leaves": [
      {
        "end": 6,
        "start": 3,
      },
    ],
    "start": 3,
  },
  {
    "decoratorKey": null,
    "end": 7,
    "leaves": [
      {
        "end": 7,
        "start": 6,
      },
    ],
    "start": 6,
  },
]
`;
